--- a/src/html/simulation.html
+++ b/src/html/simulation.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>지진파 도달알림 - 시뮬레이션 @ LDH0606</title>
-    <script src="./js/jquery-3.5.1.min.js"></script>
+    <script src="script/jquery-3.5.1.min.js"></script>
     <style>
         body {
             background-color: black;
