--- a/src/html/simulation.html
+++ b/src/html/simulation.html
@@ -15,27 +15,36 @@
 
 <body>
     <h1>시뮬레이션 목록</h1>
-    <h4>출처: https://www.weather.go.kr/pews/necismenu.html</h4>
+    <h4>출처: NECIS - 국가지진종합정보시스템</h4>
     <h4>시뮬레이션 데이터 원본 출처(가변 URL):<br><span id="dataurl">불러오는 중</span></h4>
     <h4><span id="status">불러오는 중</span></h4>
-    <button onclick="SimStart(-1)">시뮬레이션 종료</button>
+    <h4 id="runnig-color" style="color: white;">시뮬레이션 상태: <span id="runnig">확인 중</span></h4>
+    <button id="simact" onclick="SimStart(-1)">시뮬레이션 종료</button>
     <hr>
 </body>
 
 <script>
-    let SimList;
+    let isrunnig, SimList;
+    function updaterunnig(b) {
+        isrunnig = b;
+        $("#runnig").text((isrunnig ? "진행중" : "진행중인 시뮬레이션 없음"));
+        $("#runnig-color").css("color",(isrunnig ? "greenyellow" : "red"));
+        $("#simact").text(isrunnig ? "시뮬레이션 종료" : "아래 시뮬레이션 목록을 클릭");
+        $("#simact").attr('disabled', !isrunnig);
+    }
     function GetSimList(eqkid) {
+        const requrl = "https://www.weather.go.kr/pews/data/list/" + eqkid + ".l";
         $.ajax({
-            url: "https://www.weather.go.kr/pews/data/list/" + eqkid + ".l",
+            url: requrl,
             method: "GET",
             dataType: "json"
-        }).done(data => {
+        }).done((data) => {
             try {
                 $("#status").text("기상청 서버로 부터 " + data.length + "개 항목 수집 성공");
-                $("#dataurl").text(this.url);
+                $("#dataurl").text(requrl);
                 SimList = data;
                 Object.keys(data).forEach(k => {
-                    document.body.innerHTML += `<button onclick="SimStart(${k})">${data[k]["dat"]}<br>${data[k]["loc"]}<br>M ${data[k]["mag"]}</button><br>`;
+                    document.body.innerHTML += `<button onclick="SimStart(${k})">${data[k]["dat"]}<br>${data[k]["loc"]}<br>M ${data[k]["mag"]}</button><br><br>`;
                 });
             } catch (e) {
                 $("#status").text("기상청 서버로 부터 데이터 분석 실패");
@@ -47,6 +56,7 @@
     }
     function SimStart(data) {
         if (data !== -1) data = SimList[data];
+        else if (!isrunnig && data === -1) return alert("진행중인 시뮬레이션이 없습니다.");
         window.swave.SendToMainProcces(data);
     }
 </script>
